<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"

        >

        <TextView
            android:id="@+id/rating_prd_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_hotel_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/rating_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:layout_below="@+id/rating_prd_name"
            android:layout_marginEnd="5dp"
            />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            style="@android:style/Widget.Material.RatingBar.Small"
            android:layout_below="@+id/rating_prd_name"
            android:layout_toEndOf="@id/rating_txt"
            />
        <TextView
            android:id="@+id/rating_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rating_bar"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/product_list_prd_price_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rating_comment"
            android:layout_marginEnd="4dp"
            android:text="@string/posted_by"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rating_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rating_comment"
            android:layout_toEndOf="@+id/product_list_prd_price_tag"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <ImageButton
            android:visibility="gone"
            android:id="@+id/rating_update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="-2dp"
            android:contentDescription="@string/edit_button"
            android:src="@drawable/ic_baseline_edit_24" />

        <ImageButton
            android:id="@+id/rating_delete_btn"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="-2dp"
            android:contentDescription="@string/delete_button"
            android:src="@drawable/ic_baseline_delete_24" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>