<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_back"
    android:orientation="vertical"
    tools:context=".AddFeedback"
    android:clickable="true"
    android:focusable="true">



    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="76dp"
                android:layout_marginTop="20dp"
                android:text="@string/add_feedback"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hotel_name"
                android:layout_width="wrap_content"
                android:layout_height="76dp"
                android:layout_marginTop="20dp"
                android:text="@string/sample_hotel_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/rating"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/email_address"
                android:padding="16dp" />

            <RatingBar
                android:layout_gravity="start"
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                android:isIndicator="false"
                android:numStars="5"
                android:stepSize="1"
                android:theme="@style/RatingBar"/>

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/comment"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/comment"
                android:inputType="textMultiLine"

                android:lines="6"
                android:padding="16dp" />

            <Button
                android:id="@+id/btn_save_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimaryDark"
                android:padding="14dp"
                android:text="@string/save_feedback"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:background="@color/coRed"
                android:padding="14dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progress_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/colorPrimary"
        />
</androidx.constraintlayout.widget.ConstraintLayout>