<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_back"
    android:orientation="vertical"
    tools:context=".UpdateProfile"
    android:clickable="true">

    <ProgressBar
        android:id="@+id/progress_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">



            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="76dp"
                android:layout_marginTop="20dp"
                android:text="@string/update_details"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/na"
                android:layout_width="392dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:text="@string/full_name" />
            <EditText
                android:id="@+id/profile_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/full_name"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="16dp" />
            <TextView
                android:id="@+id/nicTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:text="@string/nic" />
            <EditText
                android:id="@+id/profile_nic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="@string/nic"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/nic"
                android:inputType="text"
                android:padding="16dp" />

            <TextView
                android:id="@+id/ombi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:text="@string/mobile_number" />
            <EditText
                android:id="@+id/profile_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="@string/mobile_number"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="16dp" />

            <TextView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:text="@string/choose_image" />
            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/logox"
                android:visibility="gone"
                android:contentDescription="@string/logo_image" />
            <Button
                android:id="@+id/btn_selectImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:padding="16dp"
                android:text="@string/choose_image"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:padding="16dp"
                android:text="@string/update_details"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorPrimaryDark"
                android:padding="14dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>